added download instructions

--- a/README
+++ b/README
@@ -10,3 +10,5 @@ pick up a shield powerup (the green balls) which will
 protect you from a single projectile hit. A normal paddle is
 yellow, a paddle with a shield is blue, and a stunned paddle is
 red. 
+
+Click the "ZIP" button to download.
